# aphex-maker

./: .gitignore  BACKLOG.md  README.md  config.toml  pyproject.toml  requirements.txt
src/aphex_maker/: cli.py  config.py  image.py  prep.py  synth.py
src/aphex_maker/presets/: legible.toml
