[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aphex-maker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
    "matplotlib",
    "rembg[cpu]",
]

[project.scripts]
aphex-maker = "aphex_maker.cli:main"
aphex-prep = "aphex_maker.prep:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aphex_maker.presets" = ["*.toml"]
